--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f0f0f0;
         }
         header {
-            background-color: #333;
+            background-color: #0000ff;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -20,7 +20,7 @@
         nav {
             margin: 0;
             padding: 10px;
-            background-color: #444;
+            background-color: #0000cc;
             overflow: hidden;
         }
         nav a {
@@ -31,7 +31,7 @@
             text-align: center;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #000099;
         }
         .container {
             padding: 20px;
@@ -43,7 +43,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #333;
+            background-color: #0000ff;
             color: #fff;
             text-align: center;
             padding: 10px;
@@ -80,7 +80,7 @@
     <section id="contact" class="section">
         <h2>Contact Us</h2>
         <p>Email: metav1997.1@gmail.com</p>
-    
+       
     </section>
 </div>
 
